# mcp-read-website-fast

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  env.example  komodo.toml  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
mcp_read_website/: __init__.py  __main__.py  config.py  crawler.py  server.py
openspec/: project.md
openspec/changes/add-output-format-option/: design.md  proposal.md  tasks.md
openspec/changes/add-output-format-option/specs/mcp-server/: spec.md
openspec/changes/optimize-docker-build/: design.md  proposal.md  tasks.md
openspec/changes/optimize-docker-build/specs/docker-deployment/: spec.md
openspec/changes/remove-stdio-http-only/: design.md  proposal.md  tasks.md
openspec/changes/remove-stdio-http-only/specs/cli-interface/: spec.md
openspec/changes/remove-stdio-http-only/specs/mcp-server/: spec.md
openspec/changes/update-reqs-cleanup-repo/: proposal.md  tasks.md
openspec/changes/update-reqs-cleanup-repo/specs/caching/: spec.md
openspec/changes/update-reqs-cleanup-repo/specs/cli-interface/: spec.md
openspec/changes/update-reqs-cleanup-repo/specs/mcp-server/: spec.md
src/: index.ts  serve-restart.ts  serve.ts
src/internal/: fetchMarkdown.ts
src/utils/: extractMarkdownLinks.ts  logger.ts
test/: cli-interface.test.ts  deployment.test.ts  fetchMarkdown.test.ts  mcp-server.test.ts
tests/: test_crawler.py  test_live.py  test_server.py
(+1 files in other folders)
