[project]
name = "mcp-read-website-fast"
version = "2.0.0"
description = "Fast, token-efficient web content extractor — converts pages to clean Markdown for LLM/RAG pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.1.0",
    "crawl4ai>=0.6.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
mcp-read-website-fast = "mcp_read_website.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_read_website"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit real websites (require network + Playwright browsers)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
